--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Basic HTML Page</title>
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+
 </head>
 <body>
     <header>
