--- a/templates/stock_info.html
+++ b/templates/stock_info.html
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Stock Price</title>
+  <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+
 </head>
 <body>
     <header>
@@ -16,7 +18,14 @@
           </ul>
         </nav>
     </header>
-    <h1>Stock Price for {{ ticker }}</h1>
-    <p>The current price of {{ ticker }} is ${{ price }}.</p>
+    <h1>{{ ticker }}</h1>
+    <h3 style="margin-left: 10ch;">Last Price: {{ info[2] }}</h3>
+    <h3 style="margin-left: 10ch;">Company Name: {{ info[1] }}</h3>
+    <h3 style="margin-left: 10ch;">County: {{ info[6] }}</h3>
+    <h3 style="margin-left: 10ch;">Market Cap: {{ info[5] }}</h3>
+    <h3 style="margin-left: 10ch;">Volume: {{ info[8] }}</h3>
+    <h3 style="margin-left: 10ch;">Sector: {{ info[9] }}</h3>
+    <h3 style="margin-left: 10ch;">Industry: {{ info[10] }}</h3>
+
 </body>
 </html>
