Add stocks to portfolio
.

--- a/templates/current_portfolio.html
+++ b/templates/current_portfolio.html
@@ -35,5 +35,6 @@
         </tbody>
     </table>
     <h2 style="padding: 4ch;">Total Value of Portfolio: <span style="color: lime;">${{ tot_val }}</span></h2>
+    <a href = "/add_stock" style="margin-left: 10ch;"><span style="font-size: 26px;">Add a new stock</span></a>
 </body>
 </html>
